# erddap2agol

./: LICENSE  README.md  agol.py  agol_run.py  integration_test.py  main.py  pyproject.toml  run.py
das_conf/: gcoos_42G01.json  gcoos_42G01.yaml
erddap2agol/: __init__.py  agol_run.py  build.py  main.py  run.py
erddap2agol/logs/: __init__.py  updatelog.py
erddap2agol/src/: __init__.py  ago_wrapper.py  core.py  das_client.py  erddap_client.py  glob_var.py  level_manager.py
erddap2agol/src/utils/: OverwriteFS.py  __init__.py
erddap2agol/src/utils/Converters/: Json2GeoJSON.py  Xml2GeoJSON.py
erddap2agol/src/utils/Converters/Support/: datetimeUtils.py
erddap2agol/tests/: __init__.py  erddap_client_tests.py  test_params.py
logs/: update_db.csv  updatelog.py
scripts/: local_run.py
src/: __init__.py  _init__.py  ago_wrapper.py  classes.py  das_client.py  erddap_client.py  glob_var.py  testing.py
src/utils/Converters/: Json2GeoJSON.py  Template.py
src/utils/OverwriteFS/: OverwriteFS_Sample.py
src/utils/OverwriteFS/Converters/: Rss2Json.py  Template.docx
tests/: das_scratch.py  erddap_client_tests.py  main_depc.py  run.py  scratch.py
