[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erddap2agol"
version = "0.4.1"
description = "A tool for creating, updating, and managing ERDDAP data on AGOL automatically"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas"]

[tool.setuptools.packages.find]
where = ["."]